<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.heipingrestaurant.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_image"
            style="@style/headerImage"
            android:layout_alignParentTop="true"
            android:src="@drawable/heiping_inside" />

        <TextView
            style="@style/copyrightStyle"
            android:layout_alignBottom="@+id/header_image"
            android:gravity="right"
            android:text="@string/copyright" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineWidth"
        android:background="@color/separation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/functionButton"
            android:onClick="makeCall"
            android:src="@drawable/ic_call_black_24dp" />

        <ImageView
            style="@style/functionButton"
            android:onClick="sendEmail"
            android:src="@drawable/ic_email_black_24dp" />

        <ImageView
            style="@style/functionButton"
            android:onClick="shareContent"
            android:src="@drawable/ic_share_black_24dp" />

        <ImageView
            style="@style/functionButton"
            android:onClick="findMaps"
            android:src="@drawable/ic_place_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/functionText"
            android:text="@string/phone" />

        <TextView
            style="@style/functionText"
            android:text="@string/email" />

        <TextView
            style="@style/functionText"
            android:text="@string/share" />

        <TextView
            style="@style/functionText"
            android:text="@string/maps" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineWidth"
        android:background="@color/separation" />

    <TextView
        style="@style/headline"
        android:text="@string/open_hours" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineWidth"
        android:background="@color/separation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            style="@style/functionButton"
            android:layout_weight="4"
            android:src="@drawable/ic_query_builder_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/weekday"
                    android:text="@string/monday" />

                <TextView
                    style="@style/time"
                    android:text="@string/monday_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/weekday"
                    android:text="@string/tuesday" />

                <TextView
                    style="@style/time"
                    android:text="@string/tuesday_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/weekday"
                    android:text="@string/wednesday" />

                <TextView
                    style="@style/time"
                    android:text="@string/wednesday_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/weekday"
                    android:text="@string/thursday" />

                <TextView
                    style="@style/time"
                    android:text="@string/thursday_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/weekday"
                    android:text="@string/friday" />

                <TextView
                    style="@style/time"
                    android:text="@string/friday_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/weekday"
                    android:text="@string/saturday" />

                <TextView
                    style="@style/time"
                    android:text="@string/saturday_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/weekday"
                    android:text="@string/sunday" />

                <TextView
                    style="@style/time"
                    android:text="@string/sunday_time" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineWidth"
        android:background="@color/separation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/more_info" />
</LinearLayout>
